--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>FramePlay.net - Free Online Browser Games</title>
     <link rel="canonical" href="https://frameplay.net/">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXKH7CR53S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LXKH7CR53S');
+    </script>
     <style>
         :root {
             --primary-blue: #4a69bd;
