--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
     <main>
         <section>
             <h2>Privacy Policy</h2>
-            <p>Last updated: [日期]</p>
+            <p>Last updated: 2025.2.23</p>
             
             <h3>1. Information We Collect</h3>
             <p>We may collect the following information when you visit our website:</p>
