--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,8 @@
             
             <div class="contact-info">
                 <h3>Contact Information</h3>
-                <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-                <p>Phone: +1 (123) 456-7890</p>
-                <p>Address: 123 Street Name, City, Country</p>
+                <p>Email: <a href="mailto:ClemmieBriston79@outlook.com">ClemmieBriston79@outlook.com</a></p>
+                <p>Address: Beijing, China</p>
             </div>
         </section>
     </main>
