--- a/terms.html
+++ b/terms.html
@@ -38,7 +38,7 @@
             <p>We have not reviewed all of the sites linked to our website and are not responsible for the contents of any linked site. The inclusion of any link does not imply endorsement by us of the site.</p>
             
             <h3>7. Governing Law</h3>
-            <p>These terms and conditions are governed by and construed in accordance with the laws of China, and you irrevocably submit to the exclusive jurisdiction of the courts in Beijing.</p>
+            <p>These terms and conditions are governed by and construed in accordance with the laws of the United States, and you irrevocably submit to the exclusive jurisdiction of the courts in the United States.</p>
         </section>
     </main>
     
