--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
             <div class="contact-info">
                 <h3>Contact Information</h3>
                 <p>Email: <a href="mailto:ClemmieBriston79@outlook.com">ClemmieBriston79@outlook.com</a></p>
-                <p>Address: Beijing, China</p>
+                <p>Address: United States</p>
             </div>
         </section>
     </main>
