--- a/games/chess/game-content.html
+++ b/games/chess/game-content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>游戏内容</title>
+    <title>Chess Game</title>
     <style>
         /* 简化的游戏容器样式 */
         body {
@@ -22,19 +22,25 @@
             align-items: center;
         }
         
-        /* 游戏特定样式可以在这里添加 */
+        /* 国际象棋游戏特定样式 */
+        #chess-board {
+            width: 100%;
+            max-width: 600px;
+            height: 600px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
     <!-- 只包含游戏内容的容器 -->
     <div class="game-container">
-        <!-- 这里放置游戏的实际内容 -->
-        <div id="game-content">
-            <!-- 游戏代码将在这里加载 -->
+        <!-- 这里放置国际象棋游戏的实际内容 -->
+        <div id="chess-board">
+            <!-- 这里是象棋游戏的实际内容，你需要替换为你的实际游戏代码 -->
         </div>
     </div>
     
-    <!-- 游戏特定的脚本 -->
-    <script src="js/game.js"></script>
+    <!-- 国际象棋游戏特定的脚本 -->
+    <script src="js/chess-game.js"></script>
 </body>
 </html>
