--- a/games/2048.html
+++ b/games/2048.html
@@ -330,10 +330,10 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="/privacy">Privacy Policy</a>
-                <a href="/policy">Usage Policy</a>
-                <a href="/terms">Terms of Service</a>
-                <a href="/contact">Contact Us</a>
+                <a href="../pages/privacy.html">Privacy Policy</a>
+                <a href="../pages/policy.html">Usage Policy</a>
+                <a href="../pages/terms.html">Terms of Service</a>
+                <a href="../pages/contact.html">Contact Us</a>
             </div>
         </div>
     </footer>
