--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
         
         <footer class="footer">
             <div class="footer-links">
-                <a href="pages/privacy.html">Privacy</a>
-                <a href="pages/policy.html">Policy</a>
+                <a href="pages/privacy.html">Privacy Policy</a>
+                <a href="pages/policy.html">Usage Policy</a>
                 <a href="pages/terms.html">Terms of Service</a>
                 <a href="pages/contact.html">Contact Us</a>
             </div>
