--- a/index.html
+++ b/index.html
@@ -309,9 +309,8 @@
         
         .game-image {
             width: 100%;
-            height: 260px;
+            aspect-ratio: 1;
             object-fit: cover;
-            object-position: center 70%;  /* 调整图片显示位置，尽量避开顶部水印 */
             border-bottom: 1px solid #E0E0E0;
         }
         
