--- a/pages/casual.html
+++ b/pages/casual.html
@@ -170,7 +170,7 @@
         
         .game-image {
             width: 100%;
-            height: 260px;
+            aspect-ratio: 1;
             object-fit: cover;
             border-bottom: 1px solid #E0E0E0;
         }
