--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online games that can be played directly in your browser. Collection of classic puzzle games like Chess, Pacman, Connect3, and more.">
+    <meta name="baidu-site-verification" content="codeva-EfendowKSI" />
     <title>FramePlay.net - Free Classic Online Puzzle Games</title>
     <link rel="canonical" href="https://frameplay.net/">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -15,6 +16,14 @@
       gtag('js', new Date());
 
       gtag('config', 'G-LXKH7CR53S');
+    </script>
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "quqr0kb1sa");
     </script>
     <style>
         body {
@@ -839,4 +848,4 @@
         }
     </script>
 </body>
-</html> 
+</html>
