--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online games that can be played directly in your browser. Collection of classic puzzle games like Chess, Pacman, Connect3, and more.">
-    <meta name="baidu-site-verification" content="codeva-EfendowKSI" />
+    <meta name="baidu-site-verification" content="codeva-EfendowK5l" />
     <title>FramePlay.net - Free Classic Online Puzzle Games</title>
     <link rel="canonical" href="https://frameplay.net/">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
